[package]
name = "ikki-config"
version = "0.2.0"
edition = "2021"
authors = ["jlkiri / Kirill Vasiltsov"]
description = "Ikki configuration parser"
repository = "https://github.com/jlkiri/ikki.git"
license = "MIT"
keywords = ["ikki"]
categories = ["parsing", "config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.0.9"
kdl = "4.3.0"
toposort = { path = "../toposort", version = "0.1.0" }
knuffel = "2.0.0"
miette = "5.1.0"
thiserror = "1.0.31"
