[package]
name = "ikki"
version = "0.2.1"
edition = "2021"
authors = ["jlkiri / Kirill Vasiltsov"]
description = "Ikki container orchestrator for Docker"
repository = "https://github.com/jlkiri/ikki.git"
license = "MIT"
keywords = ["ikki"]
categories = ["command-line-utilities", "development-tools", "virtualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ikki-config = { path = "../ikki-config", version = "0.2.0" }
miette = { version = "4", features = ["fancy"] }
bollard = "0.13.0"
tokio = { version = "1.19.2", features = ["full"] }
futures-util = "0.3.21"
crossterm = "0.24.0"
structopt = "0.3.26"
clap = { version = "3.2.8", features = ["derive"] }
multimap = "0.8.3"
tar = "0.4.38"
hyper = "0.14.19"
thiserror = "1.0.31"
futures = "0.3.21"
notify = "4.0.17"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
indicatif = { version = "0.17.0", features = ["tokio"] }
