[package]
name = "toposort"
version = "0.1.0"
edition = "2021"
authors = ["jlkiri / Kirill Vasiltsov"]
description = "Topological sorting"
repository = "https://github.com/jlkiri/unison"
license = "MIT"
keywords = ["sorting", "toposort"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multimap = "0.8.3"
